apps/docs/content/docs/v0.8.x/what-is-payload-better-auth.mdx
---
title: What is payload-better-auth?
description: Learn about the Better Auth plugin for PayloadCMS and its core features
icon: CircleHelp
---

# What is payload-better-auth? 🤔

Better Auth is a powerful authentication plugin for PayloadCMS that enhances and extends the default auth system with modern security features.

## Why This Plugin? 🎯

While Payload CMS comes with a solid and extensible authentication system out of the box, it primarily focuses on basic email/password authentication and API keys. Modern applications often require more sophisticated authentication methods and features.

This plugin bridges that gap by providing:
- Advanced authentication methods beyond basic email/password
- Enhanced security features like 2FA
- Automatic collections creation
- Automatic endpoints creation
- Extensible authentication workflows

## Core Features 🚀

### Basic Integration 🤝
- **Seamless Better Auth Integration**: Drop-in authentication enhancement for your Payload CMS
- **API Endpoints**: Ready-to-use authentication endpoints
- **Database Adapter**: Uses Payload as the database for Better Auth

### Advanced Features 🎯
- **Two-Factor Authentication**: TOTP-based 2FA for enhanced security
- **Automatic Collections**: Pre-configured collections for auth management
- **Extensible Architecture**: Extend collections using familiar Payload-like config
- **Developer Experience**: Comprehensive logging and debugging capabilities

### Security First 🔒
- Rate limiting on authentication endpoints
- Encrypted storage for sensitive data
- Session management and monitoring
- Customizable security policies

## Next Steps 🚀

- [Installation](./installation)
- [Auth Layer](./auth-layer/create-auth-layer)
- [Configuration](./configuration/plugin-options)